# lca

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: style-check.yml
configs/: label_statistics.yaml  label_statistics_all.yaml
lca/data_collection/: additional_info_provider.py  clone_repos.py  collect_info.py  collect_repo_info.py  collect_repos_data.py  commits_provider.py  extra_data_collection.py  extra_data_provider.py  github_collection.py  issue_provider.py  link_pulls_issues.py  object_info_provider.py  process_utils.py  pulls_extra_data_provider.py  pulls_info_provider.py  pulls_provider.py  repo_data_collection.py  repo_data_provider.py  repo_info_provider.py  repo_objects_provider.py
lca/data_collection/collect/: collect.py  github_utils.py  repo_cloner.py  repo_data_provider.py  repo_processor.py  utils.py
lca/data_collection/collect/scripts/: clone_repo.py  collect_repo_data.py
lca/data_collection/process/: process.py  prs_issues_link.py  pulls_processor.py  repo_data_processor.py
lca/issue_2_pr/: stats.ipynb
lca/notebooks/: issues_prs_stats.ipynb
