[tool.poetry]
name = "lca"
version = "0.1.0"
description = "[WIP] Benchmarking code models"
authors = [
    "Egor Bogomolov <egor.bogomolov@jetbrains.com>",
    "Maria Tigina <maria.tigina@jetbrains.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JetBrains-Research/lca"

[tool.poetry.dependencies]
python = "~3.10"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
line_length = 120
py_version = 310
profile = "black"

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
